what is this? post

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ tagline:
 author :
   name : Simon Goldin
   email : Simon.Goldin@gmail.com
-  github : goldins
+  github : 
   twitter : goldins
   feedburner : 
 
