--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ tagline:
 author :
   name : Simon Goldin
   email : Simon.Goldin@gmail.com
-  github : 
+  github : goldins
   twitter : goldins
   feedburner : 
 
@@ -100,7 +100,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-10249491-1'
     getclicky :
       site_id : 
     mixpanel :
