--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,10 @@ author :
   twitter : goldins
   feedburner : 
 
+meta :
+  description: Simon Goldin's blog!
+  keywords: Simon Goldin, web development, photography, drawing, sketching, art, New York City
+
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
