--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author :
   feedburner : 
 
 meta :
-  description: Simon Goldin's blog!
+  description: Simon Goldin's blog
   keywords: Simon Goldin, web development, photography, drawing, sketching, art, New York City
 
 # The production_url is only used when full-domain names are needed
