--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author :
   name : Simon Goldin
   email : Simon.Goldin@gmail.com
   github : goldins
-  twitter : goldins
+  twitter :
   feedburner : 
 
 meta :
